primer modificacion devs

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Este es un ejemplo de un html</title>
 </head>
 <body>
-    
+    <h1>Este es el primer commit a la rama devs</h1>
 </body>
 </html>
